--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoggedInBar.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoggedInBar.cshtml
@@ -1,5 +1,5 @@
 ﻿<section class="lobby-loggedIn-bar">
-	<div style="overflow: hidden; padding: 20px 0; color: rgb(185, 185, 185); background: white;">
+	<div style="overflow: hidden; padding: 20px 0; color: rgb(185, 185, 185); background: rgba(255,255,255,.7);">
 		@using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
   {
 			@Html.AntiForgeryToken()
@@ -7,7 +7,7 @@
   }
 		<span style="float: right;"><span style="font-size: .8em;">Zalogowany jako: </span><a class="loggedIn-nickname" href="#">@User.Identity.Name </a></span>
 	</div>
-	<div style="padding: 18px; text-align: center; max-width: 470px; margin: 0 auto; background: rgb(143,143,143); border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;border-top:1px solid rgb(243,243,243);">
+	<div style="padding: 18px; text-align: center; max-width: 470px; margin: 0 auto;">
 		<button id="addPublicEventBtn" class="myButton-white" data-bind="click: function (data, e) { $root.showAddPublicEventPopupOnClick($element, data, e) }">Stwórz publiczne wydarzenie</button>
 		<button id="addPrivateEventBtn" class="myButton-white" data-bind="click: function (data, e) { $root.showAddPrivateEventLobbyPopupOnClick($element, data, e) }">Dodaj do kalendarza</button>
 	</div>
