--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -173,6 +173,8 @@ body header {
 
 #btnAddNewEvent {
 	margin-top: 20px;
+	width: 90px;
+	position: relative;
 }
 
 .calendar-hours {
@@ -341,7 +343,7 @@ body header {
 	background: rgb(253, 253, 253);
 	height: 24px;
 	z-index: 98;
-	border-bottom:1px solid rgb(253,253,253);
+	border-bottom: 1px solid rgb(253,253,253);
 }
 
 .today-cell .cell-span-container {
@@ -351,11 +353,11 @@ body header {
 	background: rgb(242, 251, 167);
 	height: 24px;
 	z-index: 98;
-	border-top:1px solid white;
+	border-top: 1px solid rgb(182, 188, 128);
 }
 
 	.today-cell .cell-span-container .day {
-	color:rgb(151, 159, 21);
+		color: rgb(151, 159, 21);
 	}
 
 .other-month-cell .cell-span-container {
@@ -385,14 +387,19 @@ body header {
 	overflow: hidden;
 }
 
-.details-event-rectangle {
+.details-event-block {
 	height: 220px;
 	width: 245px;
 	background: rgb(248, 248, 248);
-	border: 1px solid rgb(224,224,224);
 	color: rgb(119,119,119);
 	box-shadow: 2px 2px 10px rgb(216, 216, 216);
 	overflow: hidden;
+	position: relative;
+	border: 1px solid rgb(221, 221, 221);
+	margin: 2px;
+	padding: 10px;
+	text-align: left;
+	z-index: 2;
 }
 
 .login-link {
@@ -405,7 +412,7 @@ body header {
 }
 
 #detailsPanel {
-	height: 200px;
+	height: 500px;
 }
 
 #loginLinkContainer {
@@ -424,8 +431,7 @@ body header {
 
 .today-cell {
 	background: rgba(244, 255, 143, .8) !important;
-	/*background:rgb(83,83,83) !important;*/
-	/*border: 1px solid white !important;*/
+	border: 2px solid rgb(182, 188, 128) !important;
 }
 
 	.today-cell .event-rectangle {
@@ -456,7 +462,6 @@ body header {
 	border: 1px solid white;
 	/*background: rgb(223, 240, 255);*/
 	background: rgba(150,150,150,.1);
-
 }
 
 	.other-month-cell span {
@@ -562,6 +567,8 @@ body header {
 	*/
 }
 
+
+
 #addNewEventContainer {
 	top: 25px;
 	position: absolute;
@@ -570,9 +577,7 @@ body header {
 	width: 80%;
 	margin-left: 10%;
 	display: none;
-	-webkit-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
-	-moz-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
-	box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
+	margin-bottom: 200px;
 }
 
 .form-header {
@@ -599,6 +604,18 @@ body header {
 	border-radius: 3px;
 }
 
+.save-text {
+	color: rgb(117, 117, 117);
+	font-size: 1.4em;
+	color: rgb(255, 255, 255);
+	border: 1px solid rgb(238, 238, 238);
+	padding-left: 30px;
+	padding-right: 10px;
+	padding-bottom: 2px;
+	background: rgb(113, 225, 142);
+	border-radius: 3px;
+}
+
 .form-body {
 	margin-top: 20px;
 }
@@ -607,6 +624,7 @@ body header {
 	color: rgb(155, 155, 155);
 	border: none;
 	margin-left: 20px;
+	padding-bottom: 20px;
 }
 
 	.add-event-fieldset label {
@@ -658,14 +676,11 @@ background:rgb(115, 233, 162);
 	z-index: 2;
 	border: 2px solid;
 	top: 0;
-	/*background: rgb(34, 34, 34);
-	color: rgb(204, 204, 204);*/
 	height: 23px;
 	background: white;
 	color: gray;
 	font-size: 12px;
 	line-height: 1;
-	/*border-bottom: 5px solid;*/
 	left: 0;
 	background: rgb(228, 228, 228);
 }
@@ -680,9 +695,9 @@ background:rgb(115, 233, 162);
 	overflow: hidden;
 	position: absolute;
 	z-index: 2;
-	border: 1px solid;
-	background: rgba(88,88,88,.7);
-	height: 40px;
+	border: 2px solid;
+	background: rgba(65,65,65,.7);
+	height: 41px;
 }
 
 	.event-rectangle-details span {
@@ -692,6 +707,10 @@ background:rgb(115, 233, 162);
 .month-name-header-container {
 	border-bottom: 1px solid rgb(213, 213, 213);
 	text-align: center;
+}
+
+.hover-cursor-pointer :hover {
+	cursor: pointer;
 }
 
 .event-hover-container {
@@ -704,6 +723,34 @@ background:rgb(115, 233, 162);
 	-webkit-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 	-moz-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 	box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
+}
+
+.confirmation-popupbox-yesbtn {
+	position: relative;
+}
+
+.confirmation-popupbox-nobtn {
+	position: relative;
+}
+
+.confirmation-popupbox-container {
+	position: absolute !important;
+	padding: 20px 0;
+	width: 80%;
+	left: 5%;
+	top: 100px;
+	/*background: white;*/
+	z-index: 100;
+	text-align: center;
+}
+
+.confirmation-popupbox-maintext {
+	color: gray;
+	font-size: 2em;
+}
+
+.details-delete-event-link {
+	color: red;
 }
 
 .lobby-content-body {
@@ -834,10 +881,12 @@ background:rgb(115, 233, 162);
 	text-decoration: underline;
 }
 
+	.link:hover {
+		cursor: pointer;
+	}
 
 .lobby-profile-menu {
 }
-
 
 .event-list-date-header {
 	width: 150px;
@@ -869,6 +918,54 @@ background:rgb(115, 233, 162);
 
 .lobby-footer {
 	text-align: center;
+}
+
+.details-eventblock-info-container {
+	width: 516px;
+	position: relative;
+	top: -45px;
+	z-index: 1;
+	margin-left: 2px;
+	margin-right: 2px;
+	border: 1px solid rgb(239,239,239);
+	background: rgb(252,252,252);
+	padding: 10px;
+	padding-top: 60px;
+	color: gray;
+}
+
+.details-eventblock-info {
+	padding: 10px;
+	border: 1px solid white;
+	background: rgb(240, 236,236);
+	border-bottom: 1px solid rgb(223, 223, 223);
+	border-right: 1px solid rgb(223, 223, 223);
+	overflow: hidden;
+}
+
+.details-eventblock-info-footer {
+	padding: 10px 0;
+	border: 1px solid white;
+	background: rgb(239, 239, 239);
+	border-bottom: 1px solid rgb(223, 223, 223);
+	border-right: 1px solid rgb(223, 223, 223);
+	overflow: hidden;
+}
+
+.details-event-block-container {
+	float: left;
+}
+
+
+.details-eventblock-footer {
+	position: absolute;
+	width: 100%;
+	background: white;
+	bottom: 0;
+	left: 0;
+	font-size: 14px;
+	padding: 10px;
+	padding-right: 0;
 }
 
 .margin-left-fifteen {
@@ -1171,9 +1268,9 @@ wydarzenia-tab {
 	border-radius: 3px;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
-	box-shadow: 0px 0px 3px #9d9d9d, inset 0px 0px 27px #fff;
-	-moz-box-shadow: 0px 0px 3px #9d9d9d, inset 0px 0px 14px #fff;
-	-webkit-box-shadow: 0px 0px 3px #9d9d9d, inset 0px 0px 27px #fff;
+	-webkit-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
+	-moz-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
+	box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 }
 
 	.slick-contact-form label {
