--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -29,6 +29,7 @@
 			<div>18<span class="small-minutes">00</span></div>
 			<div>19<span class="small-minutes">00</span></div>
 			<div>20<span class="small-minutes">00</span></div>
+			<div style="position:absolute;right:0;width:26px;"><span>21</span><span class="small-minutes">00</span></div>
 		</div>
 		<div style="width: 100%; height: 2px; border-top: 1px solid rgb(192,192,192); border-bottom: 1px solid rgb(244,244,244); background: rgba(0,0,0,.1);"></div>
 		<div class="table-details-body">
@@ -94,4 +95,7 @@
 </section>
 
 @Html.Partial("_DetailsEventSummary")
-<div style="height:200px;"></div>
+
+<div style="height:200px;width:50%;margin-top:100px">
+
+</div>
