--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
@@ -1,6 +1,7 @@
-﻿<section>
+﻿<section id="detailsEventBlockList">
 	<div style="overflow: hidden;" data-bind="foreach: detailsPageDayEvents()">
 		<div class="details-event-block-container">
+		<span style="display:none;" class="hidden-event-id" data-bind="text: id"></span>
 			<div class="details-event-block">
 				<div data-bind="style: { color: kind.headerColor, background: 'rgb(130,130,130)', border: '1px solid rgb(221, 221, 221)', padding: '10px', marginBottom: '10px' }">
 					<span data-bind="text: kind.name"></span>
@@ -21,6 +22,8 @@
 	</div>
 
 </section>
+
+
 
 
 
